--- a/src/Assets/styles/styles.css
+++ b/src/Assets/styles/styles.css
@@ -14,6 +14,7 @@ body {
 /* Nav bar*/
 .main {
   width: 100%;
+  padding-top: 80px;
 }
 .navbarContainer {
   margin: 0;
@@ -92,6 +93,7 @@ body {
   border-radius: 50%;
   padding: 10px 12px;
   cursor: pointer;
+  text-decoration: none;
   box-shadow: 0px 2px 5px 0px lightblue;
   /* display: none; */
 }
@@ -105,7 +107,7 @@ body {
   display: block;
   text-align: center;
 }
-.Footer div{
+.Footer div {
   display: inline-block;
 }
 .Footer a {
@@ -317,7 +319,7 @@ body {
   margin-top: auto;
 }
 .services .box {
-  min-width: 80%;
+  width: 100%;
   margin-bottom: 15px;
   padding: 12px;
   display: inline-block;
@@ -415,7 +417,7 @@ body {
 .skill .item {
   padding: 12px;
   text-align: center;
-  border:1px solid #f0f0f0;
+  border: 1px solid #f0f0f0;
   background-color: #f1f6ff;
   border-radius: 5px;
   height: 100%;
@@ -425,7 +427,7 @@ body {
   align-items: center;
 }
 .skill .item > img {
-  filter: drop-shadow(2px 2px 8px  gray);
+  filter: drop-shadow(2px 2px 8px gray);
 }
 .skill .item p {
   font-weight: bold;
@@ -541,11 +543,10 @@ body {
   background-color: transparent;
 }
 .testimonie .b1 {
-  height: 100%;
-  background: url("../Images/illust 2.png");
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
+  margin-bottom: 5rem;
+}
+.testimonie .b1 > img {
+  width: 80%;
 }
 .testimonie .t1 {
   border-left: 3px solid #d7ad00;
