--- a/src/Assets/styles/styles.css
+++ b/src/Assets/styles/styles.css
@@ -14,7 +14,7 @@ body {
 /* Nav bar*/
 .main {
   width: 100%;
-  padding-top: 80px;
+  /* padding-top: 80px; */
 }
 .navbarContainer {
   margin: 0;
